Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

5.5.1 - unreleased  (Some more stuff before release)

=========================================================================
	This a big batch of changes being ported from 5_4_stable
	Sorry this is so long...  It documents every file found in
	the diff between 5.4.5 and the current stable-5_4 and documents
	every change I moved or verified was already in place.

	stable-5_4 is as of 23 Dec 2004.  (5.4.9 release)

        Rick Widmer

file: Makefile.am

	Jeremy Kister 16 Dec 2004   5.4.9 

	- Makefile.am: fix install problem on Solaris. Some .h files
	weren't being installed correctly.

           Add a for loop for the .h files

	Tom Collins 23 Sep 2004   5.4.7

	- Added comment to vqmaillocal.c mentioning that it isn't
	maintained and probably doesn't work.  Makefile no longer
	installs vqmaillocal.

          remove vqmaillocal from makefile.am


file: Makefile.am

	Jeremy Kister 16 Dec 2004   5.4.9 

	- Makefile.am: fix install problem on Solaris. Some .h files
	weren't being installed correctly.


	Tom Collins 23 Sep 2004   5.4.7

	- Added comment to vqmaillocal.c mentioning that it isn't
	maintained and probably doesn't work.  Makefile no longer
	installs vqmaillocal.

          remove vqmaillocal from makefile.am  already done.

file: README - already done

file: README.mysql

	Tom Collins - 17 Dec 2004

        - update README.mysql for new --enable-sql-logging instead of
          --enable-mysql-logging


file: README.pgsql

	Tom Collins - 17 Dec 2004

        - update README.pgsql for new --enable-sql-logging instead of
          --enable-pgsql-logging


file: README.quotas  -  already done

file: config.h.in

	Charles Boening - Tom Collins  13 Jan 2004

	- Replace --enable-{my|pg}sql-logging with --enable-sql-logging
	  in configure options.

file: configure

	Charles Boening - Tom Collins  13 Jan 2004
