@@ -1,5 +1,5 @@
 /*
- * $Id: vactivedir.c,v 1.14 2004-11-23 15:47:03 tomcollins Exp $
+ * $Id: vactivedir.c,v 1.15 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -403,7 +403,7 @@ int vauth_setpw( struct vqpasswd *vpw, char *domain )
 
 /*   Verify the connection to the authentication database   */
 
-int vauth_open() {
+int vauth_open( int will_update ) {
 
 #ifdef SHOW_TRACE
     fprintf( stderr, "vauth_open()\n");
