@@ -1,5 +1,5 @@
 /*
- * $Id: vaddaliasdomain.c,v 1.6 2004-12-27 08:13:12 rwidmer Exp $
+ * $Id: vaddaliasdomain.c,v 1.7 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -43,7 +43,7 @@ int main(int argc, char *argv[])
     char *doma;
     char *domb;
 
-    if( vauth_open()) {
+    if( vauth_open( 1 )) {
         vexiterror( stderr, "Initial open." );
     }
 
