@@ -1,5 +1,5 @@
 /*
- * $Id: vadddomain.c,v 1.7 2004-06-03 23:33:14 rwidmer Exp $
+ * $Id: vadddomain.c,v 1.8 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -58,7 +58,7 @@ int main(int argc, char *argv[])
 
  char TmpBuf1[MAX_BUFF];
  
-    if( vauth_open()) {
+    if( vauth_open( 1 )) {
         vexiterror( stderr, "Initial open." );
     }
 
