@@ -1,5 +1,5 @@
 /*
- * $Id: vadduser.c,v 1.11 2004-05-22 12:28:21 rwidmer Exp $
+ * $Id: vadduser.c,v 1.12 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -50,7 +50,7 @@ int main(int argc,char **argv)
  char Domain[MAX_BUFF];
  struct vqpasswd *vpw;
 
-    if( vauth_open()) {
+    if( vauth_open( 1 )) {
         vexiterror( stderr, "Initial open." );
     }
 
