@@ -1,5 +1,5 @@
 /*
- * $Id: vdeluser.c,v 1.5 2004-05-22 12:28:21 rwidmer Exp $
+ * $Id: vdeluser.c,v 1.6 2004-12-28 00:31:05 rwidmer Exp $
  * Copyright (C) 1999-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -42,7 +42,7 @@ int main(int argc, char *argv[])
  char User[MAX_BUFF];
  char Domain[MAX_BUFF];
 
-    if( vauth_open()) {
+    if( vauth_open( 1 )) {
         vexiterror( stderr, "Initial open." );
     }
 
