@@ -1,5 +1,5 @@
 /*
- * $Id: vuserinfo.c,v 1.11 2004-11-23 15:47:03 tomcollins Exp $
+ * $Id: vuserinfo.c,v 1.12 2004-12-28 00:31:06 rwidmer Exp $
  * Copyright (C) 2000-2004 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -65,7 +65,7 @@ int main(int argc, char *argv[])
 
  char User[MAX_BUFF];
 
-    if( vauth_open()) {
+    if( vauth_open( 0 )) {
         vexiterror( stderr, "Initial open." );
     }
 
@@ -295,6 +295,8 @@ void display_user(struct vqpasswd *mypw, char *domain)
             display_limit (mypw, NO_IMAP,        "imap access closed");
             display_limit (mypw, NO_SMTP,        "smtp access is closed");
             display_limit (mypw, NO_RELAY,       "user not allowed to relay mail");
+            display_limit (mypw, NO_SPAMASSASSIN,"spamassassin processing disabled");
+            display_limit (mypw, DELETE_SPAM,    "delete spam");
             display_limit (mypw, NO_DIALUP,      "no dialup flag has been set");
             display_limit (mypw, BOUNCE_MAIL,    "mail will be bounced back to sender");
             display_limit (mypw, QA_ADMIN,       "has qmailadmin administrator access");
